added contact info

--- a/cv.tex
+++ b/cv.tex
@@ -190,7 +190,7 @@
         
         \textbf{Technologies:}{PyTorch, Pandas, Git, DuckDB, FastAPI, Azure, JetBrains, SSH, GraphX, Pygame, Numpy, Plotly} \\ \vspace{3pt}
         
-	\textbf{Techniques:}{CNNs, RNNs, Transformers, XGBoost , Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning,   }
+	\textbf{Techniques:}{CNNs, RNNs, Transformers, XGBoost , Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Kalman Filter, Deep Q-learning, Imitation Learning, Time Series Forecasting, Bayesian ML,    }
         
     }}
   \resumeSubHeadingListEnd
@@ -318,7 +318,7 @@
 \section{References}
   \vspace{2pt}
   \resumeSubHeadingListStart
-    \item{Susan Spence (SoftCo founder) , }
+\item{\href{https://www.linkedin.com/in/susan-spence-08a3062?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BajYKhPepTSqhbVmkl4bUuQ%3D%3D}{Susan Spence} (SoftCo founder) , }
    \resumeSubHeadingListEnd
 
 
