--- a/cv.tex
+++ b/cv.tex
@@ -83,7 +83,6 @@
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
-             #5 \\
     \end{tabular*}\vspace{-7pt}
 }
 
@@ -149,7 +148,7 @@
     $|$
     \faGithub \hspace{.5pt} \href{https://github.com/}{GitHub}
     $|$
-    \faMapMarker \hspace{.5pt} \href{https://www.google.com/maps/place/Bogazici+University+North+Campus/@41.0863067,29.0441352,15z/data=!4m5!3m4!1s0x0:0x9d2497b07c8edb2f!8m2!3d41.0863067!4d29.0441352}{Dublin, Ireland}
+    \faMapMarker \hspace{.5pt} \href{https://www.google.com/maps/place/Dublin+Pearse/@53.3433306,-6.2505958,17z/data=!3m1!4b1!4m6!3m5!1s0x48670e9108066ca5:0x500d7bb07899f3d!8m2!3d53.3433274!4d-6.2480209!16s%2Fg%2F11bxg0m2g7?entry=ttu}{Dublin, Ireland}
 \end{center}
 
 %----------- INTRODUCTION -----------
@@ -188,9 +187,9 @@
         
         \textbf{Languages:}{ Python, C++, SQL, , R, \LaTeX, Prolog, } \\ \vspace{3pt}
         
-        \textbf{Technologies:}{PyTorch, Pandas, Git, DuckDB, FastAPI, Azure, JetBrains, SSH, GraphX, Pygame, Numpy, Plotly} \\ \vspace{3pt}
+        \textbf{Technologies:}{PyTorch, JAX, Pandas, Git, DuckDB, FastAPI, Azure, JetBrains, SLURM, GraphX, WandB, Numpy, Plotly} \\ \vspace{3pt}
         
-	\textbf{Techniques:}{CNNs, RNNs, Transformers, XGBoost , Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Kalman Filter, Deep Q-learning, Imitation Learning, Time Series Forecasting, Bayesian ML,    }
+	\textbf{Techniques:}{CNNs, RNNs, Transformers, XGBoost , Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning,   }
         
     }}
   \resumeSubHeadingListEnd
@@ -204,17 +203,17 @@
   \resumeSubHeadingListStart
 
     \resumeJobSubheading
-      {SoftCo}{Dublin, Ireland}
+      {\href{https://softco.com/}{SoftCo}}{Dublin, Ireland}
       {Machine Learining Engineer}{May 2023 \textbf{--} Present, Part-time}
-      {\href{https://softco.com/}{SoftCo} }
+      { }
         \resumeItemListStart
-	\resumeItem{Was the first employee responsible for Machine Learning  at the compnay}
-            \resumeItem{Designed a Bayesian model to automate a financial matching task delivering significant increases in Purchase Order - Invoice matching rates (90\% touchless processing).}
-	    \resumeItem{Worked on a number of forecasting tasks to predict volumes of invoices processed per week for each customer of the business}
-	    \resumeItem{Designed and developed a Random Forrest model to handle a multi-label classification task with a large number of classes}
-	    \resumeItem{Helped with the development of a JSON file parser and the building of a data pipeline.}
+	\resumeItem{SoftCo develops Purchase to Pay (P2P) financial automation software.  This involves matching invoice line level data with purchase order and associated logistics data.  I joined a team to provide skills on machine learning and I built a Bayesian module to automate and increase the matching rates.  I achieved in excess of 90\% touchless processing.  SoftCo was able to take customer raw data and prove they could deliver in excess of 90\% auto match as part of the sales process.  This had a positive impact on sales as SoftCo won a greater number of new customers at a higher invoice volume.  The customer achieved significant cost savings as they only had to process the exceptio}
+            \resumeItem{Designed a Bayesian model to automate a financial matching task delivering significant increases in Purchase Order-Invoice matching rates (over 90\% touchless processing).}
+	    \resumeItem{Developed and deployed a Random Forrest model for multi-label classification task with a large number of classes}
+	    \resumeItem{Developed a JSON file parser and assisted in the construction of a data pipeline.}
+	    \resumeItem{Developed a number of forecasting models to predict customer activity and revenue}
 	    \resumeItem{Communicated frequently with Software Engineers through the Agile Scrum Framework regarding the deployment of models into production, the database architectures and the model APIs.}
-	    \resumeItem{Wrote a number of technical reports and documentation of the models in production.}
+	    \resumeItem{Compiled supporting documentation on machine learning models and technical infrastructure}
         \resumeItemListEnd
 
 	\resumeSubheading
@@ -269,7 +268,7 @@
         \textbf{Trinity College Entrance Exhibition Prize:}{Awarded to incoming students who achieved over certain points in the entrance examinations (CAO points)} \\ \vspace{3pt}
         
         
-        \textbf{William Hasslett Memorial Prize:}{Awarded to the St Andrew's College student with the best high school grades (in the Leaving Certificate Examinations)  (2017)}
+        \textbf{William Hasslett Memorial Prize:}{Awarded to the St Andrew's College student with the best high school grades and attending Trinity College (in the Leaving Certificate Examinations)  (2017)}
     }}
   \resumeSubHeadingListEnd
 
@@ -318,7 +317,7 @@
 \section{References}
   \vspace{2pt}
   \resumeSubHeadingListStart
-\item{\href{https://www.linkedin.com/in/susan-spence-08a3062?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BajYKhPepTSqhbVmkl4bUuQ%3D%3D}{Susan Spence} (SoftCo founder) , }
+  \item{\href{susan.spence7@gmail.com}{Susan Spence} (SoftCo founder)}
    \resumeSubHeadingListEnd
 
 
