--- a/cv.tex
+++ b/cv.tex
@@ -154,29 +154,6 @@
 %----------- INTRODUCTION -----------
 \section{Introduction}
    I am a highly motivated individual with a passion for problem solving. I have a strong interest in both the underlying theory and the application of machine learning algorithms. In particular, I am interested in deep learning models and Bayesian machine learning.
-%----------- EDUCATION -----------
-
-\section{Education}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-    
-    \resumeEducationHeading
-      {University of Tuebingen
-      }{Germany}
-      {MSc. in Machine Learning;   \textbf{Current Grade Average: 1.48}}{Oct 2022 \textbf{--} Present}
-        \resumeSubHeadingListStart
-        \small{\item{
-	\textbf{Relevant coursework:} Deep Learning, Statistical Machine Learning, Probabalistic Machine Learning, Trustworthy Machine learning, Time Series Analysis, Self Driving Cars, Massively Parallel Computing (CUDA Programming), Information Theory }}
-        \resumeSubHeadingListEnd
-    
-    \resumeSubheading
-    {Trinity College Dublin}
-      {Ireland}
-      {BA Mathematics;   \textbf{First Class Honors (85\% average)}}{Sep 2018 \textbf{--} Jun 2022}
-    
-  \resumeSubHeadingListEnd
-
-
 
 %----------- SKILLS -----------
 
@@ -189,7 +166,7 @@
         
         \textbf{Technologies:}{PyTorch, JAX, Pandas, Git, DuckDB, FastAPI, Azure, JetBrains, SLURM, GraphX, WandB, Numpy, Plotly} \\ \vspace{3pt}
         
-	\textbf{Techniques:}{CNNs, RNNs, Transformers, XGBoost , Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning,   }
+	\textbf{Techniques:}{CNNs, RNNs, Transformers, XGBoost , Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning, SNGP, DUQ  }
         
     }}
   \resumeSubHeadingListEnd
@@ -208,19 +185,31 @@
       { }
         \resumeItemListStart
 	\resumeItem{SoftCo develops Purchase to Pay (P2P) financial automation software.  This involves matching invoice line level data with purchase order and associated logistics data.  I joined a team to provide skills on machine learning and I built a Bayesian module to automate and increase the matching rates.  I achieved in excess of 90\% touchless processing.  SoftCo was able to take customer raw data and prove they could deliver in excess of 90\% auto match as part of the sales process.  This had a positive impact on sales as SoftCo won a greater number of new customers at a higher invoice volume.  The customer achieved significant cost savings as they only had to process the exceptio}
-            \resumeItem{Designed a Bayesian model to automate a financial matching task delivering significant increases in Purchase Order-Invoice matching rates (over 90\% touchless processing).}
 	    \resumeItem{Developed and deployed a Random Forrest model for multi-label classification task with a large number of classes}
-	    \resumeItem{Developed a JSON file parser and assisted in the construction of a data pipeline.}
+	    \resumeItem{Developed a JSON file parser and contributed to the construction of an Azure data pipeline.}
 	    \resumeItem{Developed a number of forecasting models to predict customer activity and revenue}
 	    \resumeItem{Communicated frequently with Software Engineers through the Agile Scrum Framework regarding the deployment of models into production, the database architectures and the model APIs.}
 	    \resumeItem{Compiled supporting documentation on machine learning models and technical infrastructure}
         \resumeItemListEnd
 
 	\resumeSubheading
+	{University Of Tuebingen}{Tuebingen, Germany}
+	{Research Intern}{May 2024 - September 2024}
+	\resumeItemListStart
+
+	\resumeItem{Conducted research into the utility of soft label datasets for bulding better calibrated deep networks.}
+\resumeItem{In particular investigated their utility in comparison to using regularization techniques like MixUp, Manifold Mixup, CutMix and Dropout along with distance aware networks like SNGP, DUQ and Mahalanobis Distance.}
+
+	\resumeItemListEnd
+
+	\resumeSubheading
 	{Trinity College}{Dublin, Ireland}
 	{Bachelor's Thesis}{Sep 2021 - May 2022}
 	\resumeItemListStart
-	\resumeItem{Wrote a Bachelor's thesis under the supervision of \href{https://www.maths.tcd.ie/people/kellyj/}{Dr Jack Kelly} in which I applied category theoretical techniques (in particular simplicial homotopy theory) to prove several fundamental theorems of algebraic topology. Attached is a copy of the \href{https://github.com/sam-laing/bachelor-thesis/blob/main/diss.pdf}{thesis}  }
+\resumeItem{Wrote \href{https://github.com/sam-laing/bachelor-thesis/blob/main/diss.pdf}{Bachelor's thesis} under the supervision of \href{https://www.maths.tcd.ie/people/kellyj/}{Dr Jack Kelly} in which I applied category theoretical techniques (in particular simplicial homotopy theory) to prove several fundamental theorems of algebraic topology.}
+
+
+
 	\resumeItemListEnd
 
     \resumeSubheading
@@ -254,6 +243,28 @@
     % \vspace{20pt}
   \resumeSubHeadingListEnd
 
+
+
+%----------- EDUCATION -----------
+\section{Education}
+  \vspace{3pt}
+  \resumeSubHeadingListStart
+    
+    \resumeEducationHeading
+      {University of Tuebingen
+      }{Germany}
+      {MSc. in Machine Learning;   \textbf{Current Grade Average: 1.48}}{Oct 2022 \textbf{--} Present}
+        \resumeSubHeadingListStart
+        \small{\item{
+	\textbf{Relevant coursework:} Deep Learning, Statistical Machine Learning, Probabalistic Machine Learning, Trustworthy Machine learning, Time Series Analysis, Self Driving Cars, Massively Parallel Computing (CUDA Programming), Information Theory }}
+        \resumeSubHeadingListEnd
+    
+    \resumeSubheading
+    {Trinity College Dublin}
+      {Ireland}
+      {BA Mathematics;   \textbf{First Class Honors (85\% average)}}{Sep 2018 \textbf{--} Jun 2022}
+    
+  \resumeSubHeadingListEnd
 
 
 %----------- AWARDS & ACHIEVEMENTS -----------
@@ -308,7 +319,7 @@
 
 \section{Hobbies}
   \resumeSubHeadingListStart
-  \small{\item{Jazz Guitar \& Piano, Olympic Weightlifitng, Cycling, Chess, 8-Ball Pool, Reading}}
+  \small{\item{Jazz Guitar \& Piano, Olympic Weightlifitng, Cycling, Chess, 8-Ball Pool, Spikeball}}
   \resumeSubHeadingListEnd
 
 
@@ -317,7 +328,7 @@
 \section{References}
   \vspace{2pt}
   \resumeSubHeadingListStart
-  \item{\href{susan.spence7@gmail.com}{Susan Spence} (SoftCo founder)}
+  \item{\href{https://www.linkedin.com/in/susan-spence-08a3062/}{Susan Spence} (SoftCo co-founder), \href{susan.spence7@gmail.com}{email}}
    \resumeSubHeadingListEnd
 
 
