update the personal statement

--- a/cv.tex
+++ b/cv.tex
@@ -164,8 +164,8 @@
 \end{center}
 
 %----------- INTRODUCTION -----------
-\section{Introduction}
- I am a machine learning engineer with a keen interest in both the underlying theory and the application and deployment of machine learning algorithms. In particular, I am interested in deep learning models, Bayesian machine learning and model calibration.
+\section{Personal Statement}
+I am pursuing a Master's degreee in machine learning at the University of Tuebingen. I hold a bachelors degree in Mathematics from Trinity College Dublin. My background in mathematics equips me with a rigorous analytical approach, which I actively apply in my role as a part-time Machine Learning Engineer at a prominent Irish financial software company. In my professional role, I contribute to data-driven solutions and model deployment within the financial sector, gaining hands-on experience that complements my academic pursuits. I am passionate about leveraging advanced machine learning techniques to solve complex, real-world problems, and I am eager to continue expanding my technical skills and industry knowledge as I advance in the field.
 
 %----------- SKILLS -----------
 \section{Skills}
@@ -175,7 +175,7 @@
         
         \textbf{Languages:}{ Python, C++, SQL, , R, \LaTeX, Prolog, } \\ \vspace{3pt}
         
-        \textbf{Technologies:}{PyTorch, JAX, Git, Pandas, FastAPI, Azure, JetBrains, SLURM, GraphX, WandB, Numpy, Plotly} \\ \vspace{3pt}
+        \textbf{Technologies:}{PyTorch, JAX, Pandas, FastAPI, Azure, SLURM, GraphX, WandB, Numpy, Plotly, CUDA} \\ \vspace{3pt}
         
 	\textbf{Techniques:}{CNN, RNN, Transformers, XGBoost, Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning, SNGP, DUQ }
         
@@ -342,9 +342,15 @@
 %----------- REFERENCES -----------
 \section{References}
   \vspace{2pt}
+
+  
   \resumeSubHeadingListStart
-\item{\href{https://www.linkedin.com/in/susan-spence-08a3062/}{Susan Spence} (SoftCo co-founder), \href{susan.spence@manverton.com}{email}}
+  \item{Susan Spence, Co-founder SoftCo \& Manverton. \\ Email: \href{susan.spence@manverton.com}{susan.spence@manverton.com}}
    \resumeSubHeadingListEnd
+
+%  \resumeSubHeadingListStart
+%\item{\href{https://www.linkedin.com/in/susan-spence-08a3062/}{Susan Spence} (SoftCo co-founder), \href{susan.spence@manverton.com}{email}}
+%   \resumeSubHeadingListEnd
 
 
 
