--- a/cv.tex
+++ b/cv.tex
@@ -266,7 +266,7 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
     \resumeEducationHeading
       {University of Tuebingen
       }{Germany}
-      {MSc. in Machine Learning;   \textbf{Current Grade Average: 1.48}}{Oct 2022 \textbf{--} Present}
+      {MSc. in Machine Learning;   \textbf{Current Grade Average: 1.4 (equivalent 3.8 GPA USA)}}{Oct 2022 \textbf{--} Present}
         \resumeSubHeadingListStart
         \small{\item{
 	\textbf{Relevant coursework:} Deep Learning, Statistical Machine Learning, Probabalistic Machine Learning, Trustworthy Machine learning, Time Series Analysis, Self Driving Cars, Massively Parallel Computing (CUDA Programming), Information Theory }}
