changing some academic info

--- a/cv.tex
+++ b/cv.tex
@@ -165,7 +165,7 @@
 
 %----------- INTRODUCTION -----------
 \section{Personal Statement}
-I am pursuing a Master's degreee in machine learning at the University of Tuebingen. I hold a bachelors degree in Mathematics from Trinity College Dublin. My background in mathematics equips me with a rigorous analytical approach, which I actively apply in my role as a part-time Machine Learning Engineer at a prominent Irish financial software company. In my professional role, I contribute to data-driven solutions and model deployment within the financial sector, gaining hands-on experience that complements my academic pursuits. I am passionate about leveraging advanced machine learning techniques to solve complex, real-world problems, and I am eager to continue expanding my technical skills and industry knowledge as I advance in the field.
+I am pursuing a Master's degreee in machine learning at the University of Tuebingen. I hold a Bachelor's degree in Mathematics from Trinity College Dublin. My background in mathematics equips me with a rigorous analytical approach, which I actively apply in my role as a part-time Machine Learning Engineer at a prominent Irish financial software company. In my professional role, I contribute to data-driven solutions and model deployment within the financial sector, gaining hands-on experience that complements my academic pursuits. I am passionate about leveraging advanced machine learning techniques to solve complex, real-world problems, and I am eager to continue expanding my technical skills and industry knowledge as I advance in the field.
 
 %----------- SKILLS -----------
 \section{Skills}
@@ -275,7 +275,7 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
     \resumeSubheading
     {Trinity College Dublin}
       {Ireland}
-      {BA Mathematics;   \textbf{First Class Honors (85\% average)}}{Sep 2018 \textbf{--} Jun 2022}
+      {BA Mathematics;   \textbf{First Class Honors}}{Sep 2018 \textbf{--} Jun 2022}
     
   \resumeSubHeadingListEnd
 
