--- a/cv.tex
+++ b/cv.tex
@@ -4,7 +4,7 @@
 % License : MIT
 %------------------------
 
-\documentclass[letterpaper,11pt]{article}
+\documentclass[letterpaper,10pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -165,7 +165,7 @@
 
 %----------- INTRODUCTION -----------
 \section{Personal Statement}
-I am pursuing a Master's degreee in machine learning at the University of Tuebingen. I hold a Bachelor's degree in Mathematics from Trinity College Dublin. My background in mathematics equips me with a rigorous analytical approach, which I actively apply in my role as a part-time Machine Learning Engineer at a prominent Irish financial software company. In my professional role, I contribute to data-driven solutions and model deployment within the financial sector, gaining hands-on experience that complements my academic pursuits. I am passionate about leveraging advanced machine learning techniques to solve complex, real-world problems, and I am eager to continue expanding my technical skills and industry knowledge as I advance in the field.
+I am pursuing a Master's degreee in machine learning at the University of Tuebingen. I hold a Bachelor's degree in Mathematics from Trinity College Dublin. My background in mathematics equips me with a rigorous analytical approach, which I actively apply in my role as a Machine Learning Engineer at a prominent Irish financial software company. In my professional role, I contribute to data-driven solutions and model deployment. I  am actively pursuing opportunities to leverage my expertise in machine learning to drive innovation in professional projects while continuing to expand my knowledge and skills in the field.
 
 %----------- SKILLS -----------
 \section{Skills}
@@ -173,13 +173,13 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
   \resumeSubHeadingListStart
     \small{\item{
         
-        \textbf{Languages:}{ Python, C++, SQL, , R, \LaTeX, Prolog, } \\ \vspace{3pt}
+        \textbf{Languages:}{ Python, C++, SQL, R} \\ \vspace{3pt}
         
-        \textbf{Technologies:}{PyTorch, JAX, Pandas, FastAPI, Azure, SLURM, GraphX, WandB, Numpy, Plotly, CUDA} \\ \vspace{3pt}
+        \textbf{Technologies:}{PyTorch, JAX, WandB, Pandas, FastAPI, Azure, SLURM, GraphX, CUDA, PostgreSQL, Git} \\ \vspace{3pt}
         
-	\textbf{Techniques:}{CNN, RNN, Transformers, XGBoost, Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning, SNGP, DUQ }
+	%\textbf{Techniques:}{CNN, RNN, Transformers, XGBoost, Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning, SNGP, DUQ }
         
-    }}
+    %}}
   \resumeSubHeadingListEnd
 
 
@@ -193,51 +193,38 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
     \resumeJobSubheading
       {\href{https://softco.com/}{SoftCo}}{Dublin, Ireland}
       {Machine Learining Engineer}{May 2023 \textbf{--} Present, Part-time}
-      { Business Analyst Intern}{May 2022 - September 2022}
+      {Business Analyst Intern}{May 2022 - September 2022}
         \resumeItemListStart
-	\resumeItem{SoftCo develops Purchase to Pay (P2P) financial automation software.  This involves matching invoice line level data with purchase order and associated logistics data.  I joined a team to provide skills on machine learning and I built a Bayesian module to automate and increase the matching rates.  I achieved in excess of 90\% touchless processing.  SoftCo was able to take customer raw data and prove they could deliver in excess of 90\% auto match as part of the sales process.  This had a positive impact on sales as SoftCo won a greater number of new customers at a higher invoice volume.  The customer achieved significant cost savings as they only had to process the exceptions}
-	    \resumeItem{Developed and deployed a Random Forrest model for multi-label classification task with a large number of classes}
-	    \resumeItem{Developed a JSON file parser and contributed to the construction of an Azure data pipeline.}
+	\resumeItem{Designed and implemented a Bayesian module to automate invoice-to-purchase order matching, achieving in excess of 90\% touchless processing. This solution enhanced sales by demonstrating high auto-match rates during customer onboarding, leading to increased customer acquisition and significant cost savings for clients.}
+	    \resumeItem{Developed and deployed a Random Forrest model as part of a product automating invoice coding to eliminate manual effort for customers. The project involved multi-label classification task with a large number of classes. }
+	    \resumeItem{Developed a JSON file parser and contributed to the construction of an Azure data pipeline for efficient data processing.}
 
 	    %\resumeItem{Assisted in the construction of a JSON file parser which was used to collect training data for the development of ML models}
-	    \resumeItem{Developed a number of forecasting models to predict customer activity and revenue}
-	    \resumeItem{Communicated frequently with Software Engineers through the Agile Scrum Framework}
-	    \resumeItem{Compiled supporting documentation on machine learning models}
+	    \resumeItem{Produced comprehensive documentation for machine learning models to ensure clarity and reproducibility and worked within Agile framework}
         \resumeItemListEnd
-
 	\resumeSubheading
 	{University Of Tuebingen}{Tuebingen, Germany}
-	{Research Intern}{May 2024 - September 2024}
+	{Researcher}{May 2024 - September 2024}
 	\resumeItemListStart
-
-	\resumeItem{Conducted research into the utility of soft label datasets for bulding better calibrated deep networks.}
-\resumeItem{In particular investigated their utility in comparison to using regularization techniques like MixUp, Manifold Mixup, CutMix and Dropout when using distance aware networks like SNGP, DUQ and Mahalanobis Distance.}
-
+	\resumeItem{Researched the effectiveness of soft label datasets in improving the calibration of deep neural networks, comparing their utility against regularization techniques such as MixUp, Manifold MixUp, CutMix, and Dropout in distance-aware networks like SNGP, DUQ, and Mahalanobis Distance.}
 	\resumeItemListEnd
 
-	\resumeSubheading
-	{Trinity College}{Dublin, Ireland}
-	{Bachelor's Thesis}{Sep 2021 - May 2022}
-	\resumeItemListStart
-\resumeItem{Wrote \href{https://github.com/sam-laing/bachelor-thesis/blob/main/diss.pdf}{Bachelor's thesis} under the supervision of \href{https://www.maths.tcd.ie/people/kellyj/}{Dr Jack Kelly} in which I applied category theoretical techniques (in particular simplicial homotopy theory) to prove several fundamental theorems of algebraic topology.}
 
 
 
-	\resumeItemListEnd
-
-    \resumeSubheading
-      {Trinity College}{Dublin, Ireland}
-      {Undergraduate Researcher}{Jun 2020 \textbf{--} Aug 2020}
-        \resumeItemListStart
-	\resumeItem{Conducted research into the Classification of Finite Rings using techniques in commutative algebra and category theory under the supervision of Professor \href{https://www.maths.tcd.ie/~mascotn/}{Nicolas Mascot} .}
-        \resumeItemListEnd
+%    \resumeSubheading
+%      {Trinity College}{Dublin, Ireland}
+%      {Undergraduate Researcher}{Jun 2020 \textbf{--} Aug 2020}
+%        \resumeItemListStart
+%	\resumeItem{Conducted research into the Classification of Finite Rings using techniques in commutative algebra and category theory under the supervision of Professor \href{https://www.maths.tcd.ie/~mascotn/}{Nicolas Mascot} .}
+%        \resumeItemListEnd
 
 
     \resumeSubheading
       {Trinity College}{Dublin, Ireland}
       {Teaching Assistant}{Sep 2021 \textbf{--} Dec 2021 and Sep 2022 - December 2022}
         \resumeItemListStart
-	\resumeItem{Corrected assignments for the advanced Engineering Mathematics course offerred at Trinity College Dublin. The topics included Fourier Analysis, Partial Differential Equations and Linear Programming.}
+	\resumeItem{Corrected assignments and lead tutorials for the advanced Engineering Mathematics course offerred at Trinity College Dublin. The topics included Fourier Analysis, Partial Differential Equations and Linear Programming.}
         \resumeItemListEnd
 %	\resumeSubheading
 %	{Self Employed}{Sep 2019 - June 2022}
@@ -267,16 +254,21 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
       {University of Tuebingen
       }{Germany}
       {MSc. in Machine Learning;   \textbf{Current Grade Average: 1.4 (equivalent 3.8 GPA USA)}}{Oct 2022 \textbf{--} Present}
+
+        %\small{\item{
+	%\textbf{Relevant coursework:} Deep Learning, Statistical Machine Learning, Probabalistic Machine Learning, Trustworthy Machine learning, Time Series Analysis, Self Driving Cars, Massively Parallel Computing (CUDA Programming), Information Theory }}
+
+%        \small{\item{
+			\textbf{Master's Thesis: }	
+	Conducting research into adaptive optimizers for transformer foundation models. In particular, interested in weight decay dynamics, efficient learning and quantisation. Supervised by \href{http://orvi.altervista.org/}{Antonio Orvieto}}}
+	\resumeItemListEnd
         \resumeSubHeadingListStart
-        \small{\item{
-	\textbf{Relevant coursework:} Deep Learning, Statistical Machine Learning, Probabalistic Machine Learning, Trustworthy Machine learning, Time Series Analysis, Self Driving Cars, Massively Parallel Computing (CUDA Programming), Information Theory }}
-        \resumeSubHeadingListEnd
-    
-    \resumeSubheading
+    \resumeEducationHeading
     {Trinity College Dublin}
       {Ireland}
       {BA Mathematics;   \textbf{First Class Honors}}{Sep 2018 \textbf{--} Jun 2022}
-    
+
+      \small{\textbf{\href{https://github.com/sam-laing/bachelor-thesis/blob/main/diss.pdf}{Bachelor Thesis}:} Applied category theoretical techniques (in particular simplicial homotopy theory) to prove several fundamental theorems of algebraic topology. Supervised by \href{https://www.maths.tcd.ie/people/kellyj/}{Dr Jack Kelly} }
   \resumeSubHeadingListEnd
 
 
@@ -286,17 +278,15 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-    
-        
-        \textbf{Trinity College Academic Gold Medal:}{Awarded to graduating students who achieved over a certain grade point avereage througout the four year degree.} \\ \vspace{3pt}
-        \textbf{Trinity College Entrance Exhibition Prize:}{Awarded to incoming students who achieved over certain points in the entrance examinations (CAO points)} \\ \vspace{3pt}
+        \textbf{Trinity College Academic Gold Medal:}{Awarded to graduating students who achieved over a certain grade point average througout the four year degree.} \\ \vspace{3pt}
+%        \textbf{Trinity College Entrance Exhibition Prize:}{Awarded to incoming students who achieved over certain points in the entrance examinations (CAO points)} \\ \vspace{3pt}
         
         
         \textbf{William Hasslett Memorial Prize:}{Awarded to the St Andrew's College student with the best high school grades and attending Trinity College (in the Leaving Certificate Examinations)  (2017)}
     }}
 
-     \textbf{University of California, Berkeley: }{Was awarded an academic scholarship to Berkeley for an exchange year. Was unable to attend due to the covid pandemic} \\ \vspace{3pt}
-  \resumeSubHeadingListEnd
+%     \textbf{University of California, Berkeley: }{Was awarded an academic scholarship to Berkeley for an exchange year. Was unable to attend due to the covid pandemic} \\ \vspace{3pt}
+%  \resumeSubHeadingListEnd
 
 
 
@@ -332,10 +322,10 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
 
 %----------- HOBBIES -----------
 
-  \section{Hobbies \& Interests}
-  \resumeSubHeadingListStart
-  \small{\item{Jazz Guitar \& Piano, Olympic Weightlifitng, Road Cycling, Chess, 8-Ball Pool, Spikeball, Beach Volleyball}}
-  \resumeSubHeadingListEnd
+%  \section{Hobbies \& Interests}
+%  \resumeSubHeadingListStart
+%  \small{\item{Jazz Guitar \& Piano, Olympic Weightlifitng, Road Cycling, Chess, 8-Ball Pool, Spikeball, Beach Volleyball}}
+%  \resumeSubHeadingListEnd
 
 
 
