update and tidy

--- a/cv.tex
+++ b/cv.tex
@@ -165,7 +165,8 @@
 
 %----------- INTRODUCTION -----------
 \section{Personal Statement}
-I am pursuing a Master's degreee in machine learning at the University of Tuebingen. I hold a Bachelor's degree in Mathematics from Trinity College Dublin. My background in mathematics equips me with a rigorous analytical approach, which I actively apply in my role as a Machine Learning Engineer at a prominent Irish financial software company. In my professional role, I contribute to data-driven solutions and model deployment. I  am actively pursuing opportunities to leverage my expertise in machine learning to drive innovation in professional projects while continuing to expand my knowledge and skills in the field.
+Machine Learning Engineer with a Master’s degree from the University of Tübingen and First-Class Honours in Mathematics from Trinity College Dublin. Experienced in building and deploying ML models in real-world fintech systems, with a focus on model optimization, data pipelines, and MLOps. Strong foundation in mathematics and research, with interests in deep learning, transformer architectures, and scalable ML infrastructure. Looking to join a tech-forward team to build production-grade AI solutions and tackle complex ML challenges.
+
 
 %----------- SKILLS -----------
 \section{Skills}
@@ -175,7 +176,10 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
         
         \textbf{Languages:}{ Python, C++, SQL, R} \\ \vspace{3pt}
         
-        \textbf{Technologies:}{PyTorch, JAX, WandB, Pandas, FastAPI, Azure, SLURM, GraphX, CUDA, PostgreSQL, Git} \\ \vspace{3pt}
+        \textbf{ML Tools:}{PyTorch, JAX, WandB, Torch Lightning, Numpy, Pandas, Scikit-learn, Optuna, } \\ \vspace{3pt}
+
+        \textbf{Infrastructure:}{Azure, SLURM, FastAPI, Git, GitLab } \\ \vspace{3pt}
+
         
 	%\textbf{Techniques:}{CNN, RNN, Transformers, XGBoost, Random Forrest Models, Hypothesis Testing, GLMs, Gaussian Processes, Markov Chains, Deep Q-learning, Imitation Learning, SNGP, DUQ }
         
@@ -192,21 +196,19 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
 
     \resumeJobSubheading
       {\href{https://softco.com/}{SoftCo}}{Dublin, Ireland}
-      {Machine Learining Engineer}{May 2023 \textbf{--} Present, Part-time}
+      {\textbf{Machine Learining Engineer}}{May 2023 \textbf{--} April 2025, Part-time}
       {Business Analyst Intern}{May 2022 - September 2022}
         \resumeItemListStart
-	\resumeItem{Designed and implemented a Bayesian module to automate invoice-to-purchase order matching, achieving in excess of 90\% touchless processing. This solution enhanced sales by demonstrating high auto-match rates during customer onboarding, leading to increased customer acquisition and significant cost savings for clients.}
+	\resumeItem{Developed and deployed a Bayesian invoice-matching module, enabling 95\%+ touchless processing and automating a significant portion of AP services. This solution enhanced sales by demonstra    ting high auto-match rates during customer onboarding, leading to increased customer acquisition and     significant cost savings for clients.}
 	    \resumeItem{Developed and deployed a Random Forrest model as part of a product automating invoice coding to eliminate manual effort for customers. The project involved multi-label classification task with a large number of classes. }
-	    \resumeItem{Developed a JSON file parser and contributed to the construction of an Azure data pipeline for efficient data processing.}
-
-	    %\resumeItem{Assisted in the construction of a JSON file parser which was used to collect training data for the development of ML models}
+    \resumeItem{Implemented data parsers and contributed to an Azure-based ETL pipeline to support model training workflows.}
 	    \resumeItem{Produced comprehensive documentation for machine learning models to ensure clarity and reproducibility and worked within Agile framework}
         \resumeItemListEnd
 	\resumeSubheading
 	{University Of Tuebingen}{Tuebingen, Germany}
-	{Researcher}{May 2024 - September 2024}
+{\textbf{Student Researcher}}{May 2024 - September 2024}
 	\resumeItemListStart
-	\resumeItem{Researched the effectiveness of soft label datasets in improving the calibration of deep neural networks, comparing their utility against regularization techniques such as MixUp, Manifold MixUp, CutMix, and Dropout in distance-aware networks like SNGP, DUQ, and Mahalanobis Distance.}
+	\resumeItem{Researched the effectiveness of soft label datasets in improving the calibration of deep neural networks, comparing their utility against regularization techniques such as MixUp, Manifold MixUp, CutMix, and Dropout in distance-aware networks like SNGP, DUQ, and Mahalanobis Distance. \href{https://github.com/sam-laing/soft_cifar}{Github Repository} of some work here
 	\resumeItemListEnd
 
 
@@ -222,9 +224,9 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
 
     \resumeSubheading
       {Trinity College}{Dublin, Ireland}
-      {Teaching Assistant}{Sep 2021 \textbf{--} Dec 2021 and Sep 2022 - December 2022}
+{\textbf{Teaching Assistant}}{Sep 2021 \textbf{--} Dec 2021 and Sep 2022 - December 2022}
         \resumeItemListStart
-	\resumeItem{Corrected assignments and lead tutorials for the advanced Engineering Mathematics course offerred at Trinity College Dublin. The topics included Fourier Analysis, Partial Differential Equations and Linear Programming.}
+	\resumeItem{Lead tutorials for the advanced Engineering Mathematics course offerred at Trinity College Dublin. The topics included Fourier Analysis, Partial Differential Equations and Linear Programming.}
         \resumeItemListEnd
 %	\resumeSubheading
 %	{Self Employed}{Sep 2019 - June 2022}
@@ -260,7 +262,7 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
 
 %        \small{\item{
 			\textbf{Master's Thesis: }	
-	Conducting research into adaptive optimizers for transformer foundation models. In particular, interested in weight decay dynamics, efficient learning and quantisation. Supervised by \href{http://orvi.altervista.org/}{Antonio Orvieto}}}
+	Conducting research into adaptive optimizers for transformer foundation models. In particular, interested in second-order optimization, LLM pretraining and fast training. Supervised by \href{http://orvi.altervista.org/}{Antonio Orvieto}}}
 	\resumeItemListEnd
         \resumeSubHeadingListStart
     \resumeEducationHeading
@@ -321,21 +323,23 @@ I am pursuing a Master's degreee in machine learning at the University of Tuebin
 
 
 %----------- HOBBIES -----------
-
 %  \section{Hobbies \& Interests}
 %  \resumeSubHeadingListStart
 %  \small{\item{Jazz Guitar \& Piano, Olympic Weightlifitng, Road Cycling, Chess, 8-Ball Pool, Spikeball, Beach Volleyball}}
 %  \resumeSubHeadingListEnd
 
-
-
+%  \section{Langauges}
+%  \resumeSubHeadingListStart
+%  \small{}
+%  \resumeSubHeadingListEnd
 %----------- REFERENCES -----------
 \section{References}
   \vspace{2pt}
 
   
   \resumeSubHeadingListStart
-  \item{Susan Spence, Co-founder SoftCo \& Manverton. \\ Email: \href{susan.spence@manverton.com}{susan.spence@manverton.com}}
+  \item{Susan Spence, Co-founder SoftCo \& Manverton (\href{susan.spence@manverton.com}{email})\\}
+  \item{Neil Kelly, Product Manager SoftCo (\href{neilthomaskelly@gmail.com}{email}}
    \resumeSubHeadingListEnd
 
 %  \resumeSubHeadingListStart
